Make Mqtt client ID configurable

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -13,6 +13,7 @@ mqtt:
   username: myapp@ttn
   password: myapppassword
   topic: v3/myapp@ttn/devices/+/up
+  client_id: plantmonitor
 
 giphy:
   api_key: "<mygiphykey>"
