Move language-specific config strings to separate lang_ file

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -52,50 +52,4 @@ levels:
     chat_message_reminder: high_reminder
     notification_interval: 7200
 
-messages: 
-  online: 
-    - "Ich bin wieder zurück!"
-    - "Da gab es wohl eine Unterbrechung. Ich bin wieder online :)"
-  
-  levels:
-    low_steady:
-      messages:
-        - "Bitte gieß' mich! Ich vertrockne! 😵"
-      gif_keywords: "dying death"
-    low_down:
-      messages: 
-        - "Ich könnte etwas Wasser brauchen. Mein Mund ist so trocken 😧"
-      gif_keywords: "dying death"
-    low_reminder:
-      messages: 
-        - "Hallooo!? Vergiss mich nicht! Ich vertrockne! ☠️"
-      gif_keywords: "dying death"
-
-    normal_steady:
-      messages:
-        - "Mir geht's gut. 🙂"
-        - "Ich fühl mich gut. 🙂"
-        - "Alles klar bei mir! 🙂"
-      gif_keywords: "good fine"
-    normal_up:
-      messages: 
-        - "Ich fühle mich wieder gut. Danke! 😌"
-      gif_keywords: "relieved recovered satisfied"
-    normal_down:
-      messages:
-        - "Puuh! Das war ein bisschen viel Wasser, aber jetzt geht es wieder. 🥴"
-      gif_keywords: "relieved recovered"
-  
-
-    high_steady:
-      messages: 
-        - "Ich habe zu viel Wasser! 🏊‍♂️"
-      gif_keywords: "dying drowning wave"
-    high_up:
-      messages: 
-        - "Da hast du's aber gut gemeint. Ist ziemlich nass hier. 🥵"
-      gif_keywords: "dying drowning wave"
-    high_reminder:
-      messages:
-        - "... immer noch ziemlich feucht hier... etwas trockener wäre mir lieber. 😕"
-      gif_keywords: "dying drowning wave"
+lang_code: "de"    # ISO 639-1 Code of language (needs to be supported by existing lang_<lang_code>.yaml file!)
